--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,17 +71,19 @@ input:focus {
 /* * Individual styles */
 h1 {
    font-size: 2.3rem;
+   text-align: center;
 }
 body > p {
    opacity: 0.5;
-   transition: opacity 0.6s;
+   text-align: center;
    cursor: default;
+   transition: opacity 0.6s;
 }
 body > p:hover {
    opacity: 1;
 }
 
-body > div {
+body > div:nth-child(2) {
    width: 100%;
    max-width: 400px;
    max-height: 450px;
@@ -109,7 +111,6 @@ form .btn {
 }
 
 .tasks {
-   margin-top: 30px;
    width: 100%;
    max-height: 350px;
    display: flex;
@@ -130,6 +131,9 @@ form .btn {
    align-items: center;
    gap: 5px;
 }
+.task:first-child { /* Distânciar do <form> somente quando houver filhos. */
+   margin-top: 30px;
+}
 
 .task .task-text {
    width: 80%;
@@ -145,4 +149,47 @@ form .btn {
 }
 .task .task-icon.fa-trash:hover {
    color: var(--color-02);
+}
+
+/* Edit menu */
+.edit {
+   position: absolute;
+   top: -100vh;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 100%;
+   max-width: 500px;
+   max-height: 400px;
+   padding: 20px;
+   text-align: center;
+   background-color: white;
+   box-shadow: 0 0 40px rgba(0, 0, 0, 0.55);
+   border-radius: 5px;
+   transition: all .5s;
+}
+.edit.active {
+   top: 50%;
+}
+
+.edit form {
+   width: 100%;
+   margin-top: 20px;
+   display: flex;
+   justify-content: space-between;
+   gap: 10px;
+}
+
+.edit p {
+   position: sticky;
+   margin-top: 20px;
+   max-height: 250px;
+   overflow-y: auto;
+   font-weight: 500;
+   font-size: 1.05rem;
+}
+.edit p span {
+   display: block;
+   margin-top: 10px;
+   font-weight: 300;
+   font-size: 1rem;
 }
